grammar
%tokens		WORD
%tokens		DGREAT	'>>'	DLESS	'<<'
%tokens		RET_TO	'>'		RET_FROM	'<'

command_line		:	command_sequence	NEWLINE
					|	command_sequence	EOF
					;
command_sequence	:	command
					|	command_sequence	"&&"	command	//	bonus
					|	command_sequence	"||"	command	//	bonus
					;
command			:	pipe_sequence
					;
pipe_sequence		:	simple_command	pipe_sequence_prime
					;
pipe_sequence_prime	:	PIPE	simple_command	pipe_sequence_prime
					|	void
					;
simple_command		:	cmd_prefix	cmd_word	cmd_suffix
					|	cmd_prefix	cmd_word
					|	cmd_prefix
					|	cmd_name	cmd_suffix
					|	cmd_name
					;
cmd_name			:	WORD	//	terminal
					;
cmd_word			:	WORD	//	terminal
					;
cmd_prefix			:	io_redirect
					|	cmd_prefix	io_redirect
					;
cmd_suffix			:	io_redirect
					|	cmd_suffix	io_redirect
					|	WORD
					|	cmd_suffix	WORD
					;
io_redirect			:	io_file
					|	io_here
					;
io_file				:	RET_TO	filename	'>'
					|	RET_FROM	filename	'<'
					|	DGREAT	filename	'>>'
					;
filename			:	WORD	//	terminal
					;
io_here				:	DLESS	here_end	'<<'
					;
here_end			:	WORD	//	terminal
					;
